--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-imageio==2.22.4
+imageio==2.33.1
 noise==1.2.2
-numpy==1.24.0rc2
-Pillow==9.3.0
+numpy==1.26.4
+pillow==10.2.0
 PySide2==5.15.2.1
 shiboken2==5.15.2.1
